--- a/src/index.css
+++ b/src/index.css
@@ -50,7 +50,7 @@ body {
 
 ::-webkit-scrollbar-track {
   border-radius: 10px;
-  box-shadow: inset 0 0 5px #6a4b42;
+  box-shadow: inset 0 0 5px #ac3e20;
 }
 
 ::-webkit-scrollbar-thumb {
