--- a/src/index.css
+++ b/src/index.css
@@ -55,7 +55,7 @@ body {
 
 ::-webkit-scrollbar-thumb {
   border-radius: 10px;
-  background: #6a4b42;
+  background: #8a4d3c;
 }
 
 ::-webkit-scrollbar-thumb:hover {
