--- a/src/index.css
+++ b/src/index.css
@@ -55,7 +55,7 @@ body {
 
 ::-webkit-scrollbar-thumb {
   border-radius: 10px;
-  background: #ce674b;
+  background: #c89b8f;
 }
 
 ::-webkit-scrollbar-thumb:hover {
